@@ -166,6 +166,11 @@ enable_select_cache
 -------------------
 Allows SELECT data caching to be enabled or disabled.
 
+foreground_mode
+---------------
+When enabled, this will prevent imapproxy from detaching from his parent
+process and controlling terminal.
+
 ##############################################################################
 ADDITIONAL COMMANDS:
 ##############################################################################
