@@ -137,3 +137,12 @@ send_tcp_keepalives no
 ## from an imap server.
 #
 enable_select_cache no
+
+
+#
+## foreground_mode
+##
+## This will prevent imapproxy from detaching from his parent process and
+## controlling terminal on startup.
+#
+foreground_mode no
